News for the tz database

Unreleased, experimental changes

  Changes affecting future time stamps:

    Add entries for DST transitions in Morocco in the year 2038.
    This avoids some year-2038 glitches introduced in 2013g.
    (Thanks to Yoshito Umaoka for reporting the problem.)

  Changes affecting the build procedure

    The builder can specify which programs to use, if any, instead of
    'ar' and 'ranlib', and libtz.a is now built locally before being
    installed.  (Thanks to Michael Forney.)

    A dependency typo in the 'zdump' rule has been fixed.
    (Thanks to Andrew Paprocki.)

    The Makefile has been simplified by assuming that 'mkdir -p' and 'cp -f'
    work as specified by POSIX.2-1992 or later; this is portable nowadays.

    'make clean' no longer removes 'leapseconds', since it's
    host-independent and is part of the distribution.

    The unused makefile macros TZCSRCS, TZDSRCS, DATESRCS have been removed.

  Changes affecting documentation and commentary

    tz-link.htm now mentions TC TIMEZONE's draft timezone service protocol.
    (Thanks to Mike Douglass.)


Release 2013g - 2013-09-30 21:08:26 -0700

  Changes affecting current and near-future time stamps

    Morocco now observes DST from the last Sunday in March to the last
    Sunday in October, not April to September respectively.  (Thanks
    to Steffen Thorsen.)

  Changes affecting 'zic'

    'zic' now runs on platforms that lack both hard links and symlinks.
    (Thanks to Theo Veenker for reporting the problem, for MinGW.)
    Also, fix some bugs on platforms that lack hard links but have symlinks.

    'zic -v' again warns that Asia/Tehran has no POSIX environment variable
    to predict the far future, fixing a bug introduced in 2013e.

  Changes affecting the build procedure

    The 'leapseconds' file is again put into the tzdata tarball.
    Also, 'leapseconds.awk', so tzdata is self-contained.  (Thanks to