@@ -8,6 +8,12 @@ Unreleased, experimental changes
     This avoids some year-2038 glitches introduced in 2013g.
     (Thanks to Yoshito Umaoka for reporting the problem.)
 
+  Changes affecting API
+
+    The 'tzselect' command no longer requires the 'select' command,
+    and should now work with /bin/sh on more platforms.  (Thanks to
+    Patrick 'P. J.' McDermott for reporting the problem.)
+
   Changes affecting the build procedure
 
     The builder can specify which programs to use, if any, instead of
